code refactoring & [fix] on mobile, testbtn pressed same time(visually)

--- a/src/components/result/graph.module.css
+++ b/src/components/result/graph.module.css
@@ -1,21 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
 
-.graph {
+.dataContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.openedBox {
-  text-align: center;
-}
-
 .testProgress {
   margin: 1.5rem;
   margin-top: 4rem;
-}
-.testPer {
-  font-size: 0.8rem;
 }
 
 .myMbtiPer {
